# cmake.tutorial

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
Adder/: CMakeLists.txt  adder.cpp  adder.h
